--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 	<script src="script.js"></script>
 </head>
 <body>
+	<div class="centerit">
+		<h1 class="set">Pair same letters</h1>
+	</div>
 	<div id="memory_board"></div>
 	<script> newBoard(); </script>
 </body>
